# fabric-foundry-agentic-starter

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CUSTOMIZATIONS.md  DEMO.md  README.md  README_EN.md  TRANSPARENCY_FAQ.md  apim-policy.json  azure.yaml  next-steps.md  ruff.toml  run_integration_test.py  test_mcp_integration.py  test_multitool_report.json
.github/: copilot-instructions.md
.github/agents/: fabric-foundry-developer.agent.md
.github/chatmodes/: hackathon-mentor.chatmode.md  poc-advisor.chatmode.md
.github/instructions/: agent-framework.instructions.md  azd-deployment.instructions.md  container-apps.instructions.md  foundry-agent-service.instructions.md  github-actions.instructions.md  python-api.instructions.md  sql-database-fabric.instructions.md
.github/prompts/: add-agent-tool.prompt.md  add-guardrails.prompt.md  customize-scenario.prompt.md  deploy-azd.prompt.md  final-check.prompt.md  setup-cicd.prompt.md  setup-environment.prompt.md  write-demo-story.prompt.md
.github/workflows/: azure-dev.yml.disabled  ci.yml.disabled  (+19 more)
documents/: Agent-Architecture.md  AzureAccountSetUp.md  AzureAccountSetUp_JA.md  AzureGPTQuotaSettings.md  Current-Deployment.md  Data-Model.md  DeploymentGuide.md  DeploymentGuide_JA.md  Fabric_deployment.md  Fabric_deployment_JA.md  GitHubActionsSetup.md  Implementation-Overview.md  LocalDevelopmentSetup.md  LocalDevelopmentSetup_JA.md  MultiToolTestScenarios.md  Prompts-Module.md  QuotaCheck.md  QuotaCheck_JA.md  TechnicalArchitecture.md  TechnicalArchitecture_JA.md  TestScenarios-MultiTool.md  Testing-Guide.md  re-use-foundry-project.md
infra/: README.md  abbreviations.json  deploy_ai_foundry.bicep  deploy_api_center.bicep  deploy_api_center.json  deploy_apim.bicep  deploy_apim.json  deploy_apim_role_assignment.bicep  deploy_app_service.bicep  deploy_app_service_plan.bicep  deploy_backend_docker.bicep  deploy_frontend_docker.bicep  deploy_keyvault.bicep  deploy_mcp_function.bicep  deploy_mcp_function_existing_plan.bicep  main.bicep  main.parameters.json
scripts/: Verify-ToolCalls.ps1  test.ps1  test_multitool.py
src/: gunicorn.conf.py  start.sh
src/api/python/: .env.sample  ApiApp.Dockerfile  agentic_retrieval_tool.py  app.py  chat.py  history.py  history_sql.py  knowledge_base_tool.py  mcp_client.py  multi_agent.py  pyproject.toml  requirements-test.txt  requirements.txt  utils.py
src/api/python/agents/: __init__.py  orchestrator.py  sql_agent.py  web_agent.py
src/api/python/auth/: auth_utils.py  azure_credential_utils.py
src/api/python/prompts/: __init__.py  chart_instructions.py  doc_agent.py  manager_agent.py  sql_agent.py  triage_agent.py  unified_agent.py  web_agent.py
src/api/python/tests/: __init__.py  conftest.py  test_agentic_retrieval.py  test_app.py  test_app_advanced.py  test_chat.py  test_history_sql.py  test_history_sql_functions.py  test_mcp_client.py  test_sql_agent.py  test_utils.py  test_web_agent.py
(+369 files in other folders)
