[project]
name = "agentic-api"
version = "2.11.0"
description = "Agentic Applications for Unified Data Foundation Solution Accelerator - Python API"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Microsoft", email = "azure@microsoft.com" }]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require mocked Azure services)",
    "slow: Slow tests (database, network)",
]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "__pycache__/*",
    ".venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
# Coverage threshold: 177 tests covering core business logic
fail_under = 30
